<resources>
    <string name="app_name">TinyDBApp</string>
    <string name="login">LOGIN</string>
    <string name="user_id">User ID</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">I forgot my password</string>
    <string name="signup_question">Don\'t have an account yet?</string>
    <string name="sign_up">SIGN UP</string>
</resources>
